Restructure project: separate server and client, cleanup files

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ims-server",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend for IMS",
   "main": "server.js",
   "scripts": {
@@ -9,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql2": "^3.16.0"
   },
