--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.34.0",
     "@tanstack/react-query": "^5.90.16",
+    "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
