--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "concurrently \"npm run server --prefix server\" \"npm run dev --prefix client\"",
     "install:all": "npm install && npm install --prefix client && npm install --prefix server",
+    "postinstall": "npm install --prefix client && npm install --prefix server",
     "build": "npm run build --prefix client"
   },
   "devDependencies": {
